# iamwhy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SECURITY_AUDIT.md  github-repo-best-practices.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml  stale.yml
docs/plans/: 2026-02-25-iamwhy-implementation.md  2026-02-25-pr-template-design.md
src/iamwhy/: analyzer.py  cli.py  formatters.py  models.py  resolver.py  simulator.py
tasks/: todo.md
tests/: conftest.py  test_analyzer.py  test_cli.py  test_formatters.py  test_models.py  test_resolver.py  test_simulator.py
