[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iamwhy"
version = "0.1.0"
description = "Explain AWS IAM access denials from the command line"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Specter099", email = "bel136@gmail.com" }
]
keywords = ["aws", "iam", "security", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
iamwhy = "iamwhy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[iam]>=5.0",
    "coverage[toml]>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iamwhy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/iamwhy"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
