[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iamwhy"
version = "0.1.0"
description = "Explain AWS IAM access denials from the command line"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Specter099" }
]
keywords = ["aws", "iam", "security", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.34,<2",
    "click>=8.1,<9",
    "rich>=13.0,<14",
]

[project.scripts]
iamwhy = "iamwhy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-mock>=3.12,<4",
    "moto[iam]>=5.0,<6",
    "coverage[toml]>=7.0,<8",
    "ruff>=0.8,<1",
    "pip-audit>=2.7,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iamwhy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/iamwhy"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is expected in tests
